<?xml version="1.0"?>
<package format="2">
  <name>cone_finder</name>
  <version>0.1.0</version>
  <description>Package to find cones in images or videos and provide direction to the cones</description>

  <maintainer email="ajg.public@yahoo.com">Aj G</maintainer>

  <license>Apache</license>

  <!-- <url type="website">http://wiki.ros.org/cone_finder</url> -->

  <author email="ajg.public@yahoo.com">Aj G</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>location_msgs</depend>

  <doc_depend>doxygen</doc_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
